--- a/index.html
+++ b/index.html
@@ -194,22 +194,22 @@
             - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ <br />🥉 1/3/2019
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
-            🥇 13/12/2012
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 10/7/2015
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />🥉 17/3/2017
-            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br /><br />
+            🥇 10/7/2012
+            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />
+            🥈 20/11/2012
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 13/12/2012
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
-            🥇 14/4/2014
-            - 12/10/2021
+            🥇 19/3/2014
+            - 7/12/2021
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 17/1/2019
+            🥈 14/4/2014
+            - 12/10/2021
+            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 17/1/2019
             - 13/1/2026
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 13/12/2012
-            - 5/11/2019
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            13/4/2022, 8:00:02 μ.μ.
+            13/4/2022, 8:15:02 μ.μ.
           </p>
         </section>
       </main>
