--- a/index.html
+++ b/index.html
@@ -196,20 +196,20 @@
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
             🥇 10/7/2012
             - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />
-            🥈 20/11/2012
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 14/4/2014
+            🥈 17/7/2012
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 20/11/2012
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
-            🥇 14/4/2014
-            - 12/10/2021
+            🥇 17/7/2012
+            - 14/3/2022
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 13/12/2012
-            - 5/11/2019
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 2/4/2015
-            - 12/1/2022
+            🥈 3/4/2014
+            - 8/3/2023
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΙΛΙΟΥ<br />🥉 11/3/2013
+            - 10/2/2022
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            13/4/2022, 9:45:01 μ.μ.
+            13/4/2022, 10:00:01 μ.μ.
           </p>
         </section>
       </main>
