--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="el">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="theme-color" content="#469a7f" />
+    <meta name="description" content="To bot του MySolon σας βοηθάει να παρακολουθείτε τις υποθέσεις σας στο solon.gov.gr, στέλνοντάς σας αυτόματες ειδοποιήσεις">
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://mysolon.github.io/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,7 +36,7 @@
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/style.css" />
 
-    <title>MySolon</title>
+    <title>MySolon - Αυτόματες ειδοποιήσεις από το solon.gov.gr</title>
     <script src="https://swetrix.org/swetrix.js" defer></script>
   </head>
   <body>
@@ -55,7 +58,7 @@
         <!-- <span></span> <span>Στατιστικά</span> -->
       </p>
     </header>
-    <img class="dot" src="/images/logo.jpeg" alt="logo" />
+    <img class="dot" src="/images/logo.jpeg" alt="mysolon" />
 
     <div class="container">
       <main>
@@ -199,7 +202,7 @@
           <h2 class="card__subtitle">Statistics</h2>
           <p>
             🤷🏻<em> Χρήστες:</em> 354 <br />📁<em> Υποθέσεις:</em>
-            2516 <br />
+            2519 <br />
             <br />
             <span class="hall"><strong>🏛Hall Of Shame🏛</strong></span> <br />
             Παλαιότερη δικάσιμος χωρίς εκδοθείσα απόφαση:<br />
@@ -224,7 +227,7 @@
             - 10/2/2022
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            21/4/2022, 10:00:01 π.μ.
+            21/4/2022, 10:08:17 π.μ.
           </p>
         </section>
       </main>
