--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
             - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ <br />🥉 26/3/2019
             - ΑΡΕΙΟΣ ΠΑΓΟΣ<br /><br />
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
-            🥇 1/11/2010
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 3/4/2014
-            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΙΛΙΟΥ<br />🥉 30/10/2018
+            🥇 10/7/2012
+            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />
+            🥈 20/11/2012
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 13/12/2012
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
             🥇 17/7/2012
@@ -227,7 +227,7 @@
             - 10/2/2022
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            27/4/2022, 5:30:02 μ.μ.
+            27/4/2022, 5:45:02 μ.μ.
           </p>
         </section>
       </main>
