--- a/index.html
+++ b/index.html
@@ -214,20 +214,20 @@
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
             🥇 23/10/2009
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 10/7/2012
-            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />🥉 20/11/2012
+            🥈 1/11/2010
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 16/9/2011
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
-            🥇 19/3/2014
-            - 7/12/2021
+            🥇 17/7/2012
+            - 14/3/2022
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 14/4/2014
-            - 12/10/2021
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 17/1/2019
-            - 13/1/2026
+            🥈 3/4/2014
+            - 8/3/2023
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΙΛΙΟΥ<br />🥉 11/3/2013
+            - 10/2/2022
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            29/4/2022, 8:15:01 μ.μ.
+            29/4/2022, 8:30:01 μ.μ.
           </p>
         </section>
       </main>
