--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
             - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ <br />🥉 26/3/2019
             - ΑΡΕΙΟΣ ΠΑΓΟΣ<br /><br />
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
-            🥇 1/11/2010
+            🥇 23/10/2009
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 3/4/2014
-            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΙΛΙΟΥ<br />🥉 30/10/2018
+            🥈 17/7/2012
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 11/3/2013
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
             🥇 17/7/2012
@@ -227,7 +227,7 @@
             - 10/2/2022
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            1/5/2022, 5:30:02 μ.μ.
+            1/5/2022, 5:45:01 μ.μ.
           </p>
         </section>
       </main>
