--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
             🥇 22/5/2014
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             🥈 13/2/2019
-            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ <br />🥉 26/3/2019
-            - ΑΡΕΙΟΣ ΠΑΓΟΣ<br /><br />
+            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ <br />🥉 12/4/2019
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
             🥇 10/7/2012
             - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />
@@ -227,7 +227,7 @@
             - 13/1/2026
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            3/5/2022, 7:00:02 μ.μ.
+            3/5/2022, 7:15:01 μ.μ.
           </p>
         </section>
       </main>
