--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <h2 class="card__subtitle">Statistics</h2>
           <p>
             🤷🏻<em> Χρήστες:</em> 1708 <br />📁<em> Υποθέσεις:</em>
-            23276 <br />
+            23277 <br />
             <br />
             <span class="hall"><strong>🏛Hall Of Shame🏛</strong></span> <br />
             Παλαιότερη δικάσιμος χωρίς εκδοθείσα απόφαση:<br />
@@ -218,16 +218,16 @@
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 1/11/2010
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
-            🥇 17/7/2012
+            🥇 3/8/2012
+            - 20/2/2023
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />
+            🥈 3/8/2012
+            - 20/2/2023
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />🥉 17/7/2012
             - 14/3/2022
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 7/8/2014
-            - 27/10/2023
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 3/4/2014
-            - 8/3/2023
-            ΕΙΡΗΝΟΔΙΚΕΙΟ ΙΛΙΟΥ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            13/11/2023, 3:00:01 μ.μ.
+            13/11/2023, 3:15:02 μ.μ.
           </p>
         </section>
       </main>
