--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
           <h1 class="card__title">MySolonBot</h1>
           <h2 class="card__subtitle">Statistics</h2>
           <p>
-            🤷🏻<em> Χρήστες:</em> 1748 <br />📁<em> Υποθέσεις:</em>
-            24189 <br />
+            🤷🏻<em> Χρήστες:</em> 1749 <br />📁<em> Υποθέσεις:</em>
+            24191 <br />
             <br />
             <span class="hall"><strong>🏛Hall Of Shame🏛</strong></span> <br />
             Παλαιότερη δικάσιμος χωρίς εκδοθείσα απόφαση:<br />
@@ -223,11 +223,11 @@
             ΑΡΕΙΟΣ ΠΑΓΟΣ<br />
             🥈 1/10/2014
             - 3/2/2026
-            ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />🥉 27/3/2018
-            - 27/2/2029
-            ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />🥉 26/2/2013
+            - 17/2/2023
+            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            23/11/2023, 8:00:01 μ.μ.
+            23/11/2023, 8:15:01 μ.μ.
           </p>
         </section>
       </main>
