--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <h2 class="card__subtitle">Statistics</h2>
           <p>
             🤷🏻<em> Χρήστες:</em> 1795 <br />📁<em> Υποθέσεις:</em>
-            25009 <br />
+            25008 <br />
             <br />
             <span class="hall"><strong>🏛Hall Of Shame🏛</strong></span> <br />
             Παλαιότερη δικάσιμος χωρίς εκδοθείσα απόφαση:<br />
@@ -218,16 +218,16 @@
             - ΑΡΕΙΟΣ ΠΑΓΟΣ<br />🥉 23/10/2009
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
-            🥇 3/8/2012
-            - 20/2/2023
-            ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />
-            🥈 3/8/2012
-            - 20/2/2023
-            ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />🥉 3/8/2012
+            🥇 15/7/2004
+            - 7/12/2022
+            ΑΡΕΙΟΣ ΠΑΓΟΣ<br />
+            🥈 27/3/2018
+            - 27/2/2029
+            ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />🥉 3/8/2012
             - 20/2/2023
             ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            11/12/2023, 9:15:02 μ.μ.
+            11/12/2023, 9:30:02 μ.μ.
           </p>
         </section>
       </main>
